--- a/NavbarChallenges/Challenge_1/index.html
+++ b/NavbarChallenges/Challenge_1/index.html
@@ -8,7 +8,7 @@
     <title>iNeuron</title>
   </head>
   <body>
-    <nav>
+    <nav class="mynav">
       <a href="#" class="nav-item">Home</a>
       <a href="#" class="nav-item">About</a>
       <a href="#" class="nav-item">Team</a>
