--- a/NavbarChallenges/Challenge_2/index.html
+++ b/NavbarChallenges/Challenge_2/index.html
@@ -8,7 +8,7 @@
     <title>iNeuron</title>
   </head>
   <body>
-    <ul>
+    <ul class="mynav">
       <li><a>Home</a></li>
       <li>
         <a>About</a>
