--- a/TableChallenges/Challenge_1/index.html
+++ b/TableChallenges/Challenge_1/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>iNeuron</h1>
-       <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere labore officiis odio?</h2>
+      <h1 class="titledisp">iNeuron</h1>
+       <h2 class="titledisp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere labore officiis odio?</h2>
+       <h3 class="titledisp">Contact Us</h3>
       <div class="yo">
-      <h3>Contact Us</h3>
       <p>Name : <input type="text" /></p>
       <p>Email : <input type="email" name="email" id=""> </p>
       <p>Mobile No. : <input type="number" name="number" id="number" /></p>
@@ -23,7 +23,7 @@
       <option value="card">Content Creation</option>
   </select>
       <p>Message : <input type="textarea"></p>
-     <button type="submit"><b>Submit</b></button>
+     <button class="btn" type="submit"><b>Submit</b></button>
        </div>
     </div>
   </body>
