--- a/TableChallenges/Challenge_1/index.html
+++ b/TableChallenges/Challenge_1/index.html
@@ -16,7 +16,7 @@
       <p>Name : <input type="text" /></p>
       <p>Email : <input type="email" name="email" id=""> </p>
       <p>Mobile No. : <input type="number" name="number" id="number" /></p>
-      <p>Service You Want :<select name="card" id="card"></p>
+      <p>Service You Want :<select class="myoptions" name="card" id="card"></p>
       <option value="">--Our Services--</option>
       <option value="card">SEO</option>
       <option value="card">Web Development</option>
