--- a/TableChallenges/Challenge_2/index.html
+++ b/TableChallenges/Challenge_2/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <h1> Tables </h1>
-    <hr>
+    <hr class="myrow">
     <table id="myTable" cellpadding="10">
-      <caption>My TimeTable</caption>
       
       <tr>
         <th id = "myTitle" colspan="4">Fall Term</th>
@@ -49,4 +48,8 @@
         <td>Chinese</td>
       </tr>
     </table>
+    <div class="bottomcap">
+    <caption >My TimeTable</caption></div>
+    
+  
 </html>
